@@ -78,3 +78,7 @@ table.t3-page-columns tr td span.exampleContent a {
 table#typo3-page-stdlist tr td.c-headLine {
 	background-color: #d7dbe2;
 }
+
+table.typo3-page-buttons td {
+	padding-right: 10px;
+}
