@@ -1,3 +1,7 @@
+2010-07-13  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #14855: Big Buttons in Page Module miss padding (Thanks to Georg Ringer)
+
 2010-07-13  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #15096: Missing icon for _recycler_ folders
